--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "soularium",
-  "version": "0.1.0",
+  "name": "my-webpack-project",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
@@ -12,11 +12,14 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "webpack --mode=production --node-env=production",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "build:dev": "webpack --mode=development",
+    "build:prod": "webpack --mode=production --node-env=production",
+    "watch": "webpack --watch"
   },
   "eslintConfig": {
     "extends": [
@@ -58,11 +61,20 @@
     "@storybook/preset-create-react-app": "^4.1.2",
     "@storybook/react": "^6.5.9",
     "@storybook/testing-library": "^0.0.13",
+    "@webpack-cli/generators": "^2.5.0",
     "babel-plugin-named-exports-order": "^0.0.2",
+    "css-loader": "^6.7.1",
+    "mini-css-extract-plugin": "^2.6.1",
     "pokeapi-js-wrapper": "^1.2.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "sass": "^1.54.3",
+    "sass-loader": "^13.0.2",
+    "style-loader": "^3.3.1",
+    "ts-loader": "^9.3.1",
     "typescript": "^4.7.4",
-    "webpack": "^5.74.0"
-  }
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
+  },
+  "description": "My webpack project"
 }
