--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,12 @@
     "noImplicitAny": true,
     "module": "es6",
     "target": "es5",
-    "allowJs": true
+    "allowJs": true,
+    "baseUrl": "./src",
+    "jsx": "preserve",
+    "paths": {
+      "@/*": ["./src/*"],
+    }
   },
   "files": ["src/index.ts"]
 }
